Partial fix to the overflowing bug

--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,6 @@
 #container{
-    width: 640.4px;
-    height: 640.4px;
+    width: 644.4px;
+    height: 644.4px;
     font-size: 0;
     display: inline-block;
     border: 2px solid black;
